scss/components/_buttons.scss
@mixin button-l {
	border-radius: 4px;
	padding: 8px 40px 8px 16px; //take 1px from every side for the border
	font-size: var(--font-scale-00);
	font-weight: var(--font-regular);
	font-family: var(--font-ui);
}
@mixin button-m {
	border-radius: 0px;
	padding: 4px 16px 4px 16px;
	font-size: var(--font-scale-00);
	font-weight: var(--font-regular);
	font-family: var(--font-ui);
}

@mixin button-s { // for sort icons, etc
	border-radius: 3px;
	padding: 4px
			 4px
			 0px
			 4px;
	font-size: var(--font-scale-00);
	font-weight: var(--font-regular);
	font-family: var(--font-ui);
}

button.mod-warning {
	background-color: var(--color-red-5);
	color: var(--color-white);
	border: 1px solid var(--color-red);
	box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.2) inset,
				0 1px 3px 1px rgba(0 0 0 / .1);
	@include button-l;

	&:hover {
		opacity: .9;
	}
	&:active {
		opacity: 1;
		box-shadow: 0px 1px 3px 1px rgba(8 8 8 / 0.2) inset;
		border-color: var(--color-primary-0);
	}
	.theme-dark & {
		background-color: var(--color-red-6);
		border-color: var(--color-red-6);
		&:active {
			border-color: var(--color-primary-0);
			box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.5) inset,
						0px 1px 3px 1px rgba(8 8 8 / 0.5) inset;
		}
	}
}

button.mod-cta {
	color: var(--background-primary);
	@include button-l;
	line-height: var(--leading-2);
	background-color: var(--color-accent);
	border: 1px solid var(--color-accent);
	box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.2) inset,
				0 1px 3px 1px rgba(0 0 0 / .1);

	&:hover {
		background-color: rgba(var(--color-accent-l) / .9);
	}
	&:active {
		background-color: rgba(var(--color-accent-l) / 1);
		box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.2) inset,
					0px 1px 3px 1px rgba(8 8 8 / 0.2) inset;
		border-color: var(--color-primary-0);
	}
	.theme-dark & {
		font-weight: var(--font-medium);
		background-color: rgba(var(--color-accent-d) / 1);
		border: 1px solid var(--color-primary-0);
		box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.3) inset,
					0 1px 3px 1px rgba(0 0 0 / .1);

		&:hover {
			background-color: rgba(var(--color-accent-d) / .9);
		}
		&:active {
			background-color: rgba(var(--color-accent-d) / 1);
			box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.2) inset,
			0px 1px 3px 1px rgba(8 8 8 / 0.3) inset;
		}
	}
}

/* Sort, Selected icons*/
.modal.mod-community-plugin .setting-item .setting-item-control button.clickable-icon,
.modal.mod-community-theme .setting-item .setting-item-control button.clickable-icon {
	color: var(--text-muted);
	@include button-s;
	padding: 2px 4px;
	line-height: .9;
	border: 1px solid var(--color-primary-3);
	box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.1) inset,
				0 2px 5px 1px rgba(0 0 0 /.1);
	background-color: var(--color-primary-2);

	&:hover {
		opacity: .9;
	}
	&:active {
		box-shadow: 0px 1px 3px 1px rgba(8 8 8 / 0.2) inset;
	}
	.theme-dark & {
		box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.5) inset,
					0 1px 3px 1px rgba(0 0 0 / .1);
		border: 1px solid var(--color-primary-2);

		&:active {
			box-shadow: 0px 1px 3px 1px rgba(8 8 8 / 0.5) inset;
		}
	}
}
// Publish Page buttons
.modal.mod-publish button:not(.mod-cta):not(.mod-warning) {
	color: var(--color-primary-2);
	@include button-l;
	background-color: var(--color-hover);
}

//Secondary Buttons

.modal button:not(.mod-cta):not(.mod-warning):not(.pcr-button),
.modal.mod-settings .setting-item-control button:not(.mod-cta):not(.mod-warning):not(.pcr-button),
.modal.mod-community-plugin .community-plugin-info p button:not(.mod-cta):not(.mod-warning) {
	color: var(--text-normal);
	@include button-l;
	line-height: var(--leading-2);
	border: 1px solid var(--color-primary-3);
	box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.1) inset,
				0 2px 5px 1px rgba(0 0 0 /.1);
	background-color: var(--color-primary-2);

	&:hover {
		opacity: .9;
	}
	&:active {
		box-shadow: 0px 1px 3px 1px rgba(8 8 8 / 0.2) inset;
	}
	.theme-dark & {
		box-shadow: 0px -1px 0px 0px rgba(8 8 8 / 0.5) inset,
					0 1px 3px 1px rgba(0 0 0 / .1);
		border: 1px solid var(--color-primary-2);

		&:active {
			box-shadow: 0px 1px 3px 1px rgba(8 8 8 / 0.5) inset;
		}
	}
}


.modal-container.mod-confirmation .modal-button-container {
	display: flex;
	flex-direction: row;
	width: auto;
	height: auto;

	.is-mobile & {
		flex-direction: column;

		& button.mod-warning:first-child {
			margin-left: 0;
		}
	}

	button.mod-warning:first-child {
		order: 0;
		margin-right: auto;
		margin-left: 12px;
		background-color: var(--background-primary);
		color: var(--color-red);
		text-shadow: 0 -1px rgba(0 0 0 / .3);
		background: none;
		border: 1px solid var(--color-red);
		@include button-l;
	}
	button.mod-warning	{
		order: 0;
	}
}

.is-mobile .modal-button-container button { /* fixes default mobile margin and padding*/
	margin: 4px 0;
	padding: 8px 0;
}

